--- a/host/.env.example
+++ b/host/.env.example
@@ -1,4 +1,4 @@
 read_interval_s=0.5
-serial_port="/dev/ttyACM0"
+serial_port=/dev/ttyACM0
 serial_baud_rate=250000
 backend_sensor_url=http://172.17.0.1:5000/v1/sensors/flowmeters/0/reading
