--- a/host/.env.example
+++ b/host/.env.example
@@ -1,4 +1,5 @@
+backend_sensor_url=http://172.17.0.1:5000
 read_interval_s=0.5
-serial_port=/dev/ttyACM0
+sensor_count=2
 serial_baud_rate=250000
-backend_sensor_url=http://172.17.0.1:5000/v1/sensors/flowmeters/0/reading
+serial_port=/dev/ttyACM0
