feat(sensor): incorporate interpolation and voltage reading functionality
- Add a function to interpolate measurement values based on voltage and specified ranges.
- Implement voltage reading from the sensor within the serial communication function.
- Update configuration settings to include voltage and measurement ranges.
- Ensure each sensor's measurement range is validated against the sensor count.
- Refactor the main loop to read voltage, interpolate measurements, and send results to the backend.

issue #9

--- a/host/.env.example
+++ b/host/.env.example
@@ -1,5 +1,7 @@
-backend_sensor_url=http://172.17.0.1:5000
+backend_sensor_url=http://localhost:5000
 read_interval_s=0.5
 sensor_count=2
 serial_baud_rate=250000
 serial_port=/dev/ttyACM0
+voltage_range='[0,3.3]'
+measurement_range='[[0.0,1.0], [0,100]]'
