--- a/host/.env.example
+++ b/host/.env.example
@@ -1,8 +1,8 @@
-backend_sensor_url=http://localhost:5000
+backend_sensor_url=http://localhost:8000
 log_level=DEBUG
 read_interval_s=0.5
 sensor_count=2
 serial_baud_rate=250000
-serial_port=/dev/ttyACM0
-voltage_range='[0,3.3]'
-measurement_range='[[0.0,1.0], [0,100]]'
+serial_port=mock
+voltage_range='[-1,1]'
+measurement_range='[[-1,1], [-1,1]]'
